<resources>
    <string name="app_name">Sample Application</string>
    <string name="initializing">Initializing…</string>
    <string name="open_fragment">Open Fragment</string>
    <string name="open_activity">Open Activity</string>
    <string name="application_id">Application ID</string>
    <string name="provider_id">Provider ID</string>
    <string name="base_url">Base URL</string>
    <string name="use_full_screen">Use Full Screen</string>
    <string name="provide_noconversations_image">Provide No Conversations Image</string>
    <string name="messaging_sdk_version">Messaging SDK Version</string>
    <string name="cars_for_sale">Cars For Sale</string>
    <string name="settings">Settings</string>
    <string name="show_all_conversations">Show All Conversations</string>
    <string name="qaURL">qa-api.contactatonce.com</string>

    <string name="add_listing">Add Listing</string>
    <string name="name">Name</string>
    <string name="reference_id">Reference ID</string>
    <string name="initial_user_text">Initial User Text</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>
